# PAT

./: .gitignore  Dockerfile  README.md  allrun.sh  compose.yaml  meta-config.json  treiber_stack_rc_spec.ml
analyzer/: dune  scheme.ml
ast/: ast.ml  astHelper.ml  common.ml  dune  fv.ml  item.ml  map.ml  parseTree.ml  pmachine.ml  stat.ml  subst.ml
benchmarks/2PC/: task.ml
benchmarks/ADT/: connectedGraph.ml  connectedGraph_spec.ml  dune  filesystem.ml  filesystem_spec.ml  graph.ml  graph_spec.ml  hashtable.ml  hashtable_random.ml  hashtable_spec.ml  ifc.ml  ifc_spec.ml  naive_hashtable.ml  nfa.ml  nfa_spec.ml  queue.ml  queueBak.ml  set.ml  set_spec.ml  stack.ml  stackBak.ml  stack_spec.ml  stlc.ml  stlc_moti.ml  stlc_simple.ml  stlc_spec.ml  stlc_spec.ml.bak  stlc_spec_moti.ml  test.ml
benchmarks/ADT/Hashtable/: task.ml
benchmarks/ADT/Set/: task.ml
benchmarks/ADT/Stack/: task.ml
benchmarks/BackendMariaDB/: backendMariaDB.ml  dune
benchmarks/BankServer/: task.ml
benchmarks/ChainReplication/: task.ml  task.ml.bak
benchmarks/Database/: task.ml
benchmarks/EspressoMachine/: pheader.ml  task.ml
benchmarks/FailureDetector/: task.ml
benchmarks/Firewall/: task.ml
benchmarks/HeartBeat/: pheader.ml  task.ml  task.ml.enum
benchmarks/Kermit2PCModel/: task.ml  task.ml.bak
benchmarks/MonkeyDB/: cart.ml  cart_cc_spec.ml  cart_rc_spec.ml  cart_spec.ml  common.ml  common.ml.bak  courseware.ml  coursewareDB.ml  courseware_cc_spec.ml  courseware_cc_spec.ml.old  courseware_db.ml  courseware_rc_spec.ml  courseware_rc_spec.ml.old  courseware_rc_spec_broken.ml  courseware_simp_spec.ml  courseware_spec.ml  database.ml  dune  monkeyBD.ml  read.ml  read_cc_spec.ml  shopping.ml  shopping_simp_spec.ml  shopping_spec.ml  smallbank.ml  smallbank.ml.bak  smallbank_cc_spec.ml  smallbank_rc_spec.ml  smallbank_simp_spec.ml  smallbank_spec.ml  transaction.ml  transaction_simp_spec.ml  transaction_spec.ml  treiberStack.ml  treiber_stack_cc_spec.ml  treiber_stack_rc_spec.ml  treiber_stack_spec.ml  twitter.ml  twitter.ml.bak  twitter_cc_spec.ml  (+3 more)
benchmarks/OCamlBench/: debruijn1.ml  debruijn1_simp_spec.ml  debruijn1_spec.ml  debruijn2.ml  debruijn2_simp_spec.ml  debruijn2_spec.ml  dune  filesystem.ml  filesystem_simp_spec.ml  graph.ml  graph_simp_spec.ml  hashtable_random.ml  hashtable_simp_spec.ml  ifc.ml  ifc_simp_spec.ml  nfa.ml  nfa_simp_spec.ml  queue.ml  set.ml  set_simp_spec.ml  stack.ml  stack_simp_spec.ml  stack_spec.ml  stlc.ml  stlc_spec_moti.ml  stlc_spec_simple.ml
benchmarks/PBench/: firewall_spec.ml  kermit2pcmodel_pheader.ml  p_anonreadatomicity_simp_spec.ml  p_anonreadatomicity_spec.ml  p_bankserver_simp_spec.ml  p_bankserver_spec.ml  (+19 more)
codegen/: codegen.ml  common.ml  dune  gen.ml  prop_gen.ml
doc/: .gitignore  bibliography.bib  dsl_reference.md  example.md  example.tex  explaination.tex  filesystem_spec_explanation.md  main.tex  refinementtydef.sty
docker/: compose.yaml
examples/: Simplied2PCNew.p
frontend/: common.ml  dune  front.ml  to_item.ml  to_rty.ml  to_term.ml
interpreter/: bak.ml  common.ml  dune  eval.ml  interpreter.ml  msgBuffer.ml  pool.ml  runtime.ml  sample.ml  store.ml
interpreter_old/: common.ml
language/: dune  language.ml
ntypecheck/: dune  normal_item_typing.ml  normal_rty_typing.ml
output/: warmup.scm
pbackend/: astbuilder.ml  dune  fromTerm.ml  toplang.ml
plang_parser/: compile.ml  lexer.mll  parser.mly  paux.ml  plang_parser.ml
preprocess/: basic_typing.ml  preprocess.ml  type_alias.ml
rawdesym/: desymctx.ml  desymeval.ml  dune  head.ml  mapping.ml  rawdesym.ml  resym.ml  satcheck.ml
script/: common.py  compile_p.sh  replace_under_dir.py  run2025.py  run_adt.py  run_bench.py  run_ocaml_bench.py  run_p.sh  run_p_bench.py
scripts/: common.py  init_cluster.py  run_ocaml_bench.py  run_p_bench.py  start.sh  start_cluster.py
stat/: .Database.json
syntax/: common.ml  dune  item.ml  line.ml  lineOpt.ml  plan.bak  plan.ml  syntax.ml  wrapper.ml
synthesis/: abduction.ml  common.ml  compile.ml  desymctx.ml  desymeval.ml  dune  gamma.ml  mkTerm.ml  norm.ml  optimize.ml  recursion.ml  refine.ml  simpEq.ml  synthesis.ml
templize/: dune.bak  templize.ml
(+91 files in other folders)
