(library
 (public_name haft.analyzer)
 (name analyzer)
 (wrapped true)
 (modules
   scheme
   analyzer
 )
 (preprocess (pps ppx_deriving_yojson ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_here))
 (libraries zutils language))
