(env
 (dev
  (flags
   (:standard -w -32-35-27-33-26-64)))
 (release
  (flags
   (:standard -w -32-35-27-33-26-64))
  (ocamlopt_flags
   (:standard -unsafe -noassert -inline 100))))

(library
 (name ast)
 (public_name haft.ast)
 (wrapped true)
 (modules
  common
  parseTree
  stat
  map
  subst
  fv
  astHelper
  constructor_declaration
  inst
  item
  pmachine
  wrapper
  ast)
 (preprocess
  (pps
   ppx_optcomp
   ppx_compare
   ppx_sexp_conv
   ppx_inline_test
   ppx_assert
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_here
   ppx_deriving_yojson))
 (libraries zutils AutomataLibrary spectrum))
