(library
 (public_name haft.adt)
 (name adt)
 (wrapped true)
 (libraries language interpreter qcheck)
 (modules queue stack set filesystem graph nfa stlc ifc stlc_moti hashtable)
 (inline_tests)
 (preprocess
  (pps
   ppx_here
   ppx_inline_test
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord)))
