(library
 (public_name haft.monkeyBD)
 (name monkeyBD)
 (wrapped true)
 (libraries language interpreter BackendMariaDB)
 (modules
  common
  shopping
  twitter
  smallbank
  ; courseware 
  coursewareDB
  twitter
  smallbank
  courseware
  transaction
  ; treiberStack 
  ; smallbank
  )
 (inline_tests)
 (preprocess
  (pps ppx_here ppx_inline_test)))
