(library
 (public_name haft.ocaml_bench)
 (name ocaml_bench)
 (wrapped true)
 (libraries language interpreter qcheck-stm.sequential qcheck-stm.domain)
 (modules
  queue
  stack
  set
  filesystem
  graph
  nfa
  stlc
  ifc
  debruijn2
  debruijn1
  hashtable
  hashtable_random)
 (inline_tests)
 (preprocess
  (pps
   ppx_here
   ppx_inline_test
   ppx_deriving.show
   ppx_deriving.eq
   ppx_deriving.ord)))
